[project]
name = "infrastructure"
version = "0.0.1"
description = ""
authors = [
    {name = "Michael Gusek",email = "michael.gusek@web.de"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pulumi (>=3.219.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "infrastructure", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
