[project]
name = "infrastructure"
version = "0.0.3"
description = ""
authors = [
    {name = "Michael Gusek",email = "michael.gusek@web.de"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pulumi (>=3.219.0,<4.0.0)",
    "pulumi-tls (>=5.3.0,<6.0.0)",
    "pulumi-random (>=4.19.1,<5.0.0)",
    "pulumi-proxmoxve (>=7.12.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "infrastructure", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
